benerin header & container

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="main">
         <!--copy-container-->
         <div class="copy-container">
-            <h1>HELLO WORLD<span>.</span></h1>
-            <h2>Ayo belajar coding</h2>
+            <h1>Hey Oh<span>!</span></h1>
+            <h2>When You sit alone, Come get a little known</h2>
         </div>
         <!--contents-->
         <div class="copy-container">
